--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: hatMe
 main: com.shloms.serubin.hatme.HatMe
-version: 0.5.1
+version: 0.6.4
 
 commands:
    hat:
@@ -8,6 +8,11 @@ commands:
       description: Command that puts the item you are holding on your head.
       permission: hatme.basic
       usage: /<command> - puts item on head
+   hat:
+      aliases: [hat, hatme, hm]
+      description: Command that puts the item of the item id you type in on your head.
+      permission: hatme.give
+      usage: /<command> [item id]- puts item on head from item id
    unhat:
       aliases: [unhat, unhatme, unhm]
       description: Command to take your "hat" off.
