--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -5,16 +5,9 @@ version: 0.6.4
 commands:
    hat:
       aliases: [hat, hatme, hm]
-      description: Command that puts the item you are holding on your head.
-      permission: hatme.basic
-      usage: /<command> - puts item on head
-   hat:
-      aliases: [hat, hatme, hm]
-      description: Command that puts the item of the item id you type in on your head.
-      permission: hatme.give
-      usage: /<command> [item id]- puts item on head from item id
+      description: Command that puts the item on your head.
+      usage: /<command> [item id]- puts item on head [puts item on head from item id]
    unhat:
       aliases: [unhat, unhatme, unhm]
       description: Command to take your "hat" off.
-      permission: hatme.basic
       usage: /<command> - takes item off head
