--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,15 +1,13 @@
 name: hatMe
 main: com.shloms.serubin.hatme.HatMe
-version: 0.5.1
+version: 0.6.6
 
 commands:
    hat:
       aliases: [hat, hatme, hm]
-      description: Command that puts the item you are holding on your head.
-      permission: hatme.basic
-      usage: /<command> - puts item on head
+      description: Command that puts the item on your head.
+      usage: /<command> [item id]- puts item on head [puts item on head from item id]
    unhat:
       aliases: [unhat, unhatme, unhm]
       description: Command to take your "hat" off.
-      permission: hatme.basic
       usage: /<command> - takes item off head
