--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 hatMe:
     enable: true
     allowed: 
+    - 0
     - 1
     - 2
     - 3
@@ -41,3 +42,4 @@ hatMe:
     - 103
     - 112
     opnorestrict: true
+    notAllowedMsg: Invalid Item
