Complete Recode, New Perms, New Messages, New Everything, Same Old Awesome Functions

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
-hatMe:
-    enable: true
-    allowed: 
+hatme:
+  restrict: true
+  allowed: 
     - 1
     - 2
     - 3
@@ -40,5 +40,4 @@ hatMe:
     - 98
     - 103
     - 112
-    opnorestrict: true
-    notAllowedMsg: "You do not have permission"
+  notAllowedMsg: Invalid Item
