--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.serubin</groupId>
-	<artifactId>hatMe</artifactId>
-	<version>1.0.0</version>
+	<artifactId>HatMe</artifactId>
+	<version>2.0.0</version>
 	<packaging>jar</packaging>
-	<name>hatMe</name>
+	<name>HatMe</name>
 	<url></url>
 
 	<repositories>
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.2.3-R0.1</version>
+			<version>1.2.4-R1.0</version>
 			<type>jar</type>
 			<scope>compile</scope>
 			<optional>false</optional>
